# monkey

./: .clang-format  .clang-tidy  .clangd  .cmake-format.json  .codespellrc  .editorconfig  .gitignore  .local_vimrc.vim  .pre-commit-config.yaml  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  ast_8c.html  ast_8h.html  buffer_8h.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_e63aed17ca12ecf13a4ba395ed06a5b5.html  dir_ef3b2545113449f8f25e623a543d64e3.html  environment_8c.html  environment_8h.html  evaluator_8c.html  evaluator_8h.html  files.html  index.html  lexer_8c.html  lexer_8h.html  macros_8h.html  main_8c.html  modules.html  monkey_8c.html  monkey_8h.html  namespaces.html  object_8c.html  (+52 more)
.github/workflows/: ci.yml
cmake/: coverage.cmake  dev-mode.cmake  docs-ci.cmake  docs.cmake  folders.cmake  install-rules.cmake  install-script.cmake  lint-targets.cmake  lint.cmake  prelude.cmake  project-is-top-level.cmake  spell-targets.cmake  spell.cmake  variables.cmake
source/: buffer.h  lib.c  main.c  monkey.c  monkey.h  span.h
source/monkey/: ast.c  ast.h  environment.c  environment.h  evaluator.c  evaluator.h  lexer.c  lexer.h  macros.h  object.c  object.h  parser.c  parser.h  repl.c  repl.h  stream.c  stream.h  string.c  string.h  token.c  token.h  user.c  user.h  vector.h
test/: CMakeLists.txt
test/source/: ast_test.cpp  evaluator_test.cpp  lexer_test.cpp  monkey_test.cpp  monkey_wrapper.hpp  parser_test.cpp  repl_test.cpp  stream_test.cpp  string_test.cpp  token_test.cpp  user_test.cpp
tools/: run.py
